added branches and avatar

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="searchForm">
   <mat-form-field>
-    <input formControlName="letters" name="search" autocomplete="off" matInput placeholder="Search"/>
+    <input formControlName="letters" name="search" autocomplete="off" matInput placeholder="Search repository"/>
   </mat-form-field>
 </form>
